[package]
name = "n2yo-satellite-position-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
sgp4 = "2.2.0"
tokio = { version = "1.12.0", features = ["full"] }

[lib]
name="satellite_info"
path="src/satellite_info.rs"

[[bin]]
name = "tle-sgp4"
path = "src/main.rs"
